# the-setup

./: README.md  playbook.yaml  pyproject.toml
.github/workflows/: molecule.yaml
molecule/default/: molecule.yml  prepare.yml
roles/configure_bash/files/: .bash_aliases  .bashrc_local
roles/configure_git/tasks/: main.yaml
roles/install_alacritty/files/: alacritty.toml
roles/install_alacritty/meta/: main.yaml
roles/install_alacritty/tasks/: main.yaml
roles/install_fonts/defaults/: main.yaml
roles/install_fonts/handlers/: main.yaml
roles/install_fonts/tasks/: main.yaml
roles/install_fonts/tests/: test_install_fonts.py
roles/install_i3/tasks/: main.yaml
roles/install_nodejs/defaults/: main.yaml
roles/install_nodejs/tasks/: main.yaml
roles/install_nodejs/tests/: test_install_node.py
roles/install_rust_tools/defaults/: main.yaml
roles/install_rust_tools/tasks/: main.yaml
roles/install_rust_tools/tests/: test_install_rust_tools.py
roles/install_tmux/files/: tmux.conf
roles/install_tmux/tasks/: main.yaml
roles/install_tmux/tests/: test_tmux.py
roles/install_utils/defaults/: main.yaml
roles/install_utils/tasks/: main.yaml
roles/setup_neovim/defaults/: main.yaml
roles/setup_neovim/files/config/: init.lua  lazy-lock.json
roles/setup_neovim/meta/: main.yaml
roles/setup_neovim/tasks/: main.yaml
roles/setup_neovim/tests/: test_setup_neovim.py
