[project]
name = "the-setup"
version = "0.1.0"
description = "Python environment for running ansible playbook that configures my dev environment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible==11.11.0",
    "ansible-lint>=25.9.2",
    "molecule==25.1.0",
    "molecule-plugins[docker]>=25.8.12",
    "pyyaml>=6.0.3",
    "ruff>=0.14.2",
    "testinfra>=6.0.0",
]
